<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_action_navigation_close"
                android:layout_marginLeft="170dp"
                android:layout_marginStart="170dp"
                android:contentDescription="@string/close"
                android:background="#fff"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:layout_below="@+id/cancel"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/important_notice"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/feed_bg"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:inputType="textMultiLine"
                android:text="@string/nulla_dignissim_elit_et_libero_luctus_convallis_at_in_urna_maecenas_id_efficitur_eros_morbi_orci_libero_dapibus_nec_nibh_nec_tristique_pulvinar_sem_nulla_dignissim_elit_et_libero_luctus_convallis_at_in_urna_nulla_dignissim_elit_et_libero_luctus_convallis_at_in_urna_maecenas_id_efficitur_eros_morbi_orci_libero_dapibus_nec_nibh_nec_tristique_pulvinar_sem_nulla_dignissim_elit_et_libero_luctus_convallis_at_in_urna"
                android:textSize="14sp"
                tools:ignore="TextViewEdits" />

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/feed_bg"
                android:text="@string/change_merchant"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:background="@color/light_blue"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/white"
                android:text="@string/proceed"
                />
        </LinearLayout>
    </RelativeLayout>